[gd_scene load_steps=9 format=3 uid="uid://cn6sy338tb7m4"]

[ext_resource type="Script" path="res://addons/inventory-system-demos/fps/box_inventory.gd" id="1_f8i83"]
[ext_resource type="PackedScene" uid="uid://blbmab4op747n" path="res://addons/inventory-system-demos/assets/survival-kit-1.1/Models/GLTF format/box.glb" id="3_4i45c"]
[ext_resource type="InventoryDatabase" uid="uid://x5huasdaljjl" path="res://addons/inventory-system-demos/base/database.tres" id="3_h8sic"]
[ext_resource type="PackedScene" uid="uid://1e0sia1epsfi" path="res://addons/inventory-system-demos/assets/survival-kit-1.1/Models/GLTF format/boxOpen.glb" id="4_jaqj8"]
[ext_resource type="AudioStream" uid="uid://c4fwwaoaldmu" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/doorOpen_1.ogg" id="5_sufq2"]
[ext_resource type="AudioStream" uid="uid://b3gtnm1sd6eyg" path="res://addons/inventory-system-demos/assets/kenney_rpgaudio/Audio/doorClose_1.ogg" id="6_x0aos"]

[sub_resource type="InteractAction" id="Resource_opm00"]
description = "Open Box"

[sub_resource type="BoxShape3D" id="BoxShape3D_x2vdb"]

[node name="Box Inventory" type="StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.28112)
collision_layer = 18
collision_mask = 3
script = ExtResource("1_f8i83")
actions = Array[InteractAction]([SubResource("Resource_opm00")])

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_x2vdb")

[node name="Inventory" type="Inventory" parent="."]
slots = Array[Slot]([null, null, null, null, null, null, null, null, null, null, null, null, null, null, null, null])
create_slot_if_needed = true
remove_slot_if_empty = true
database = ExtResource("3_h8sic")

[node name="box" parent="." instance=ExtResource("3_4i45c")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -0.57105, 0)

[node name="boxOpen" parent="." instance=ExtResource("4_jaqj8")]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, -0.57105, 0)
visible = false

[node name="Open" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_sufq2")

[node name="Close" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("6_x0aos")

[connection signal="closed" from="Inventory" to="." method="_on_inventory_closed"]
[connection signal="opened" from="Inventory" to="." method="_on_inventory_opened"]
